docs/1.0.2/_sources/api/gammapy.astro.population.Exponential.rst.txt
Exponential
===========

.. currentmodule:: gammapy.astro.population

.. autoclass:: Exponential
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Exponential.amplitude
      ~Exponential.bbox_with_units
      ~Exponential.bounding_box
      ~Exponential.bounds
      ~Exponential.col_fit_deriv
      ~Exponential.cov_matrix
      ~Exponential.eqcons
      ~Exponential.evolved
      ~Exponential.fit_deriv
      ~Exponential.fittable
      ~Exponential.fixed
      ~Exponential.has_user_bounding_box
      ~Exponential.has_user_inverse
      ~Exponential.ineqcons
      ~Exponential.input_units
      ~Exponential.input_units_allow_dimensionless
      ~Exponential.input_units_equivalencies
      ~Exponential.input_units_strict
      ~Exponential.inputs
      ~Exponential.inverse
      ~Exponential.linear
      ~Exponential.meta
      ~Exponential.model_constraints
      ~Exponential.model_set_axis
      ~Exponential.n_inputs
      ~Exponential.n_outputs
      ~Exponential.n_submodels
      ~Exponential.name
      ~Exponential.outputs
      ~Exponential.param_names
      ~Exponential.param_sets
      ~Exponential.parameter_constraints
      ~Exponential.parameters
      ~Exponential.return_units
      ~Exponential.separable
      ~Exponential.standard_broadcasting
      ~Exponential.stds
      ~Exponential.sync_constraints
      ~Exponential.tied
      ~Exponential.uses_quantity
      ~Exponential.z_0

   .. rubric:: Methods Summary

   .. autosummary::

      ~Exponential.__call__
      ~Exponential.coerce_units
      ~Exponential.copy
      ~Exponential.deepcopy
      ~Exponential.evaluate
      ~Exponential.get_bounding_box
      ~Exponential.has_inverse
      ~Exponential.input_shape
      ~Exponential.output_units
      ~Exponential.prepare_inputs
      ~Exponential.prepare_outputs
      ~Exponential.rename
      ~Exponential.render
      ~Exponential.set_slice_args
      ~Exponential.strip_units_from_tree
      ~Exponential.sum_of_implicit_terms
      ~Exponential.with_units_from_data
      ~Exponential.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: bbox_with_units
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: cov_matrix
   .. autoattribute:: eqcons
   .. autoattribute:: evolved
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: n_submodels
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: stds
   .. autoattribute:: sync_constraints
   .. autoattribute:: tied
   .. autoattribute:: uses_quantity
   .. autoattribute:: z_0

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: coerce_units
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: get_bounding_box
   .. automethod:: has_inverse
   .. automethod:: input_shape
   .. automethod:: output_units
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: set_slice_args
   .. automethod:: strip_units_from_tree
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
